typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings25_ES6.ts.stderr
error: Unterminated string constant
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings25_ES6.ts:3:9
  |
3 | var x = "\u{00000000000067}
  |         ^^^^^^^^^^^^^^^^^^^

